<resources>
    <string name="app_name">LCO Home Workout</string>
    <string name="practise_entry_manually">Manually</string>
    <string name="practise_entry_randomly">Randomly</string>
    <string name="manual_card_excercise_count">Number of Excercies: 0</string>
    <string name="random_card_excercise_count">Number of Excercies</string>

    <string name="manual_exercise_sets">Number of Sets:</string>
    <string name="manual_exercise_minutes">Total Minutes per set: 0</string>
    <string name="start_btn">Start</string>
    <string name="exer_popup_text">EXERCISE\nWILL START\nIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="interval_fragment_interval_text">INTERVAL</string>
    <string name="interval_fragment_next_exercise">NEXT EXERCISE</string>
    <string name="interval_fragment_skip_btn">Skip</string>
    <string name="random_choose_rechoose_btn">Re-choose</string>
    <string name="daily_exercise_motivate_text">A Never-Ending Workout Schedule</string>

    <string name="splash_title">LCO HOME WORKOUT</string>
    <string name="splash_motto">Be Home and Be fit </string>
</resources>
