<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context=".RandomChooseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/random_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/random_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/random_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/random_exercise_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/random_card_excercise_count"
                android:textColor="@color/font_color"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView

                android:id="@+id/random_exercise_sets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/manual_exercise_sets"
                android:textColor="@color/font_color"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@id/random_exercise_count"
                app:layout_constraintTop_toBottomOf="@id/random_exercise_count" />

            <Spinner
                android:id="@+id/random_choose_set_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/random_exercise_sets"
                app:layout_constraintStart_toEndOf="@+id/random_exercise_sets"
                app:layout_constraintTop_toTopOf="@+id/random_exercise_sets" />

            <TextView
                android:id="@+id/random_choose_min_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/manual_exercise_minutes"
                android:textColor="@color/font_color"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/random_exercise_sets"
                app:layout_constraintTop_toBottomOf="@id/random_exercise_sets" />

            <Spinner
                android:id="@+id/random_choose_exercise_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/random_exercise_count"
                app:layout_constraintStart_toEndOf="@+id/random_exercise_count"
                app:layout_constraintTop_toTopOf="@+id/random_exercise_count" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/random_card"
        app:layout_constraintStart_toStartOf="@+id/random_card"
        app:layout_constraintTop_toBottomOf="@id/random_card" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/random_choose_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toTopOf="@+id/random_choose_start_btn"
        app:layout_constraintEnd_toEndOf="@+id/view1"
        app:layout_constraintStart_toStartOf="@+id/view1"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <Button
        android:id="@+id/random_choose_start_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/start_btn"
        android:text="@string/start_btn"
        android:textColor="@color/font_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/random_choose_recyclerview"
        app:layout_constraintStart_toEndOf="@+id/random_choose_rechoose_btn" />

    <Button
        android:id="@+id/random_choose_rechoose_btn"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/start_btn"
        android:text="@string/random_choose_rechoose_btn"
        android:textColor="@color/font_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/random_choose_recyclerview" />


</androidx.constraintlayout.widget.ConstraintLayout>