<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context=".Fragment.IntervalFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/interval_fragment_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/interval_fragment_interval_text"
            android:textColor="@android:color/white"
            android:textSize="42sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/interval_fragment_oval"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/circle_counter"
            android:backgroundTint="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/interval_fragment_name"
            app:layout_constraintStart_toStartOf="@+id/interval_fragment_name"
            app:layout_constraintTop_toBottomOf="@+id/interval_fragment_name" />

        <TextView
            android:id="@+id/interval_fragment_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textColor="@color/font_color"
            android:textSize="52sp"
            app:layout_constraintBottom_toBottomOf="@+id/interval_fragment_oval"
            app:layout_constraintEnd_toEndOf="@+id/interval_fragment_oval"
            app:layout_constraintStart_toStartOf="@+id/interval_fragment_oval"
            app:layout_constraintTop_toTopOf="@+id/interval_fragment_oval" />

        <View
            android:id="@+id/interval_fragment_hr"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@color/font_color"
            android:backgroundTint="@color/font_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/interval_fragment_oval" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/interval_fragment_next_exercise"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="@+id/interval_fragment_hr"
            app:layout_constraintStart_toStartOf="@+id/interval_fragment_hr"
            app:layout_constraintTop_toBottomOf="@+id/interval_fragment_hr" />

        <TextView
            android:id="@+id/interval_fragment_next_exercise_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/interval_fragment_next_exercise"
            android:textColor="@android:color/white"
            android:textSize="52sp"
            app:layout_constraintBottom_toTopOf="@+id/interval_fragment_next_exercise_min_text"
            app:layout_constraintEnd_toEndOf="@+id/interval_fragment_hr"
            app:layout_constraintStart_toStartOf="@+id/interval_fragment_hr"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/interval_fragment_next_exercise_min_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="1 min"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/interval_fragment_skipBtn"
            app:layout_constraintEnd_toEndOf="@+id/interval_fragment_next_exercise_text"
            app:layout_constraintStart_toStartOf="@+id/interval_fragment_next_exercise_text" />

        <Button
            android:id="@+id/interval_fragment_skipBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/start_btn"
            android:text="@string/interval_fragment_skip_btn"
            android:textColor="@color/font_color"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/interval_fragment_hr"
            app:layout_constraintStart_toStartOf="@+id/interval_fragment_hr" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>